changed css styles and added image and image folder

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="aboutDiv">
             <!-- image -->
             <div class="imgDiv">
-                <img src="images/slack dp (1).jpg"alt="@Benard Simon" data-testid="slackProfilePicture">
+                <img src="images/Ben_slackk.jpg"alt="@Benard Simon" data-testid="slackProfilePicture">
             </div>
             <!-- personal infromation -->
             <div class="aboutMeDiv">
@@ -52,13 +52,7 @@
          <div class="goalDiv">
             <h4>My Goal For The Next Two Year In Frontend Development:</h4>
             <!-- My Goals -->
-             <ul>
-                <li>Master Frontend Framework</li>
-                <li>Build complex web applications, like a single-page application or a progressive web app</li>
-                <li>Learn about architecture and scalabity</li>
-                <li>Learn Modern Web Technologies</li>
-                <li>Learn the basics of Web3</li>
-             </ul>
+           <p>In two years, I want to be a rockstar software engineer who bridges the tech gap in Nigeria. I'll be honing my skills to tackle any project, frontend or backend, and building cool solutions that empower under-served communities. Think clean water access app or educational tools for rural areas. By then, I'll be a coding mentor, sharing my knowledge and inspiring the next generation of Nigerian tech wizards!</p>
          </div>
     </section>
 </body>
